<resources>
    <string name="app_name">FireBaseStack</string>
    <string name="titulo_form_cadastro">Cadastre-se</string>
    <string name="titulo_form_login">Login do Usuario</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="texto_botao_entrar">Entrar</string>
    <string name="texto_botao_redefinir_senha">Redifinir Senha</string>
    <string name="texto_botao_deslogar">Deslogar</string>
    <string name="texto_tela_cadastro">Cadastra-se agora</string>
    <string name="texto_esqueci_senha">Esqueci a senha</string>


</resources>